--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,29 @@ using namespace std;
 int main()
 {
     int n, t1 = 0, t2 = 1, nextTerm = 0;
-    cout << "Enter the number of terms: ";
+    cout << "Enter the number of terms you want to see: ";
     cin >> n;
     cout << "Fibonacci Series: ";
     for (int i = 1; i <= n; ++i)
     {
-        // Prints the first two terms.
         if(i == 1)
         {
-            cout << " " << t1;
+            cout << t1;
             continue;
+            //prints 1st term.
         }
         if(i == 2)
         {
-            cout << t2 << " ";
+            cout << ", " << t2;
             continue;
+            //prints 2nd term.
         }
         nextTerm = t1 + t2;
         t1 = t2;
         t2 = nextTerm;
         
-        cout << nextTerm << " ";
+        cout << ", " << nextTerm;
+        //prints the rest of the terms.
     }
     return 0;
 }
